--- a/package.json
+++ b/package.json
@@ -14,20 +14,20 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.17",
     "@types/react-modal": "^3.16.2",
-    "next": "13.5.6",
+    "next": "^14.2.5",
     "nookies": "^2.5.2",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-modal": "^3.16.1"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/node": "^20.14.10",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10",
     "eslint": "^8",
-    "eslint-config-next": "13.5.6",
+    "eslint-config-next": "^14.2.5",
     "postcss": "^8",
     "tailwindcss": "^3",
     "typescript": "^5"
