--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@headlessui/react": "^1.7.17",
     "@types/react-modal": "^3.16.2",
     "next": "^14.2.5",
+    "next-themes": "^0.3.0",
     "nookies": "^2.5.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
