--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-modal": "^3.16.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.13",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
